--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "16.6.0"
+  },
   "scripts": {
     "start": "node app",
     "dev": "nodemon app",
