--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "node": "16.6.0"
   },
   "scripts": {
-    "start": "node app",
-    "dev": "nodemon app",
+    "start": "node index",
+    "dev": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.5",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
