--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "16.6.0"
   },
   "scripts": {
-    "start": "node index",
+    "start": "node index.js",
     "dev": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
