--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "node": "16.6.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node index",
+    "dev": "nodemon index",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
@@ -25,7 +24,6 @@
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13",
-    "nodemon": "^2.0.7",
-    "serve": "^12.0.0"
+    "nodemon": "^2.0.7"
   }
 }
